add TIM7 support with interrupt handling and initialization

--- a/uart_test.ioc
+++ b/uart_test.ioc
@@ -9,8 +9,9 @@ Mcu.Family=STM32L4
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
 Mcu.IP2=SYS
-Mcu.IP3=USART2
-Mcu.IPNb=4
+Mcu.IP3=TIM7
+Mcu.IP4=USART2
+Mcu.IPNb=5
 Mcu.Name=STM32L432K(B-C)Ux
 Mcu.Package=UFQFPN32
 Mcu.Pin0=PC14-OSC32_IN (PC14)
@@ -22,7 +23,8 @@ Mcu.Pin5=PA14 (JTCK-SWCLK)
 Mcu.Pin6=PA15 (JTDI)
 Mcu.Pin7=PB3 (JTDO-TRACESWO)
 Mcu.Pin8=VP_SYS_VS_Systick
-Mcu.PinsNb=9
+Mcu.Pin9=VP_TIM7_VS_ClockSourceINT
+Mcu.PinsNb=10
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L432KCUx
@@ -38,6 +40,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true\:true\:false
+NVIC.TIM7_IRQn=true\:7\:0\:true\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0.GPIOParameters=GPIO_Label
 PA0.GPIO_Label=MCO [High speed clock in]
@@ -160,9 +163,14 @@ RCC.VCOInputFreq_Value=4000000
 RCC.VCOOutputFreq_Value=64000000
 RCC.VCOSAI1OutputFreq_Value=32000000
 RCC.WatchDogFreq_Value=32000
+TIM7.IPParameters=Prescaler,Period
+TIM7.Period=100-1
+TIM7.Prescaler=32000-1
 USART2.IPParameters=VirtualMode-Asynchronous
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM7_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM7_VS_ClockSourceINT.Signal=TIM7_VS_ClockSourceINT
 board=NUCLEO-L432KC
 boardIOC=true
